--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -57,3 +57,15 @@ footer {
 .center {
     text-align: center;
 }
+
+.liste {
+    /*text-decoration: none;*/
+    color: black;
+}
+
+.liste:hover {
+    text-decoration: cadetblue;
+    color: cadetblue;
+}
+
+
