--- a/templates/wish/detail.html.twig
+++ b/templates/wish/detail.html.twig
@@ -4,7 +4,9 @@
 
 {% endblock %}
 
-{% block body %}
-
+{% block main %}
+    <h1 class="align-left">{{ wish.title }}</h1>
+    <p class="align-left">Créé le {{ wish.dateCreated | date("d/m/Y") }} par {{ wish.author }}</p>
+    <p class="align-left">{{ wish.description }}</p>
 {% endblock %}
 
