--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -24,17 +24,27 @@
     {# {% block header %}{% endblock %} #}
     <div>
         <div class="align-left">
-            <img class="logo" src="{{ asset('img/logo.svg') }}" alt="logo d'un seau"/>
-            <span class="text-grand">Bucket-List</span>
-            {% if app.user %}
-                <span>Welcome {{ app.user.username }} !</span>
-                <span><a href="{{ path('app_logout') }}">Logout</a></span>
-            {% else %}
-                <span><a href="{{ path('app_register') }}">Register</a></span>
-                <span><a href="{{ path('app_login') }}">Login</a></span>
-            {% endif %}
+            <div class="grid-ligne">
+                <div>
+                    <img class="logo" src="{{ asset('img/logo.svg') }}" alt="logo d'un seau"/>
+                    <span class="text-grand">Bucket-List</span>
+                </div>
+                <div class="vertical-center center">
+                    {% if app.user %}
+                        <div>
+                            <span class="space-right">Welcome {{ app.user.username }} !</span>
+                            <span><a class="space-right" href="{{ path('app_logout') }}">Logout</a></span>
+                        </div>
+                    {% else %}
+                        <div>
+                            <span><a class="space-right" href="{{ path('app_register') }}">Register</a></span>
+                            <span><a class="space-right" href="{{ path('app_login') }}">Login</a></span>
+                        </div>
+                    {% endif %}
+                </div>
+            </div>
         </div>
-        <div class="align-left grid-ligne">
+        <div class="align-left">
             <a class="space-right" href="{{ path('main_home') }}">Home</a>
             <a class="space-right" href="{{ path('wish_list') }}">All wishes</a>
             {% if app.user %}
